# ViT-CatDogClassification

./: .gitignore  ReadMe.md  commands.txt  pyproject.toml  todo.txt
data/: data_process.py
evaluate/: eval.py
extract_weights/: extract_pretrain_weights-dinov2-base.py
inference/: feature_extractor.py  sample_inference.py
model/: mlp_head.py  vit_config.py  vit_model.py
model_weights/: load_mlp_weights.py  load_weight.py
test_utils/: test_evaluate.py  test_load_weights.py  test_mlp_head.py  test_vit.py
traintest/: feature_trainer.py
