[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-project"
version = "0.1.0"

[tool.setuptools]
packages = ["evaluate", "model", "model_weights", "test_utils", "weight_vit_base_224"]  # 手动指定核心包（多个包用逗号分隔，如 ["evaluate", "models"]）
package_dir = {"": "."}  # 告诉 setuptools：包的根目录是项目根（. 表示当前目录）